--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,12 @@
       android:text="AndroidResideMenu"
       />
 
+  <Button
+      android:id="@+id/main_menu_LDrawer"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:layout_marginTop="10dp"
+      android:text="LDrawer"
+      />
+
 </LinearLayout>
