--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
   <color name="white">#ffffff</color>
+  <color name="drawer_arrow_second_color">#334858</color>
+  <color name="actionbar_color">#3F51B5</color>
 </resources>
