--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,20 @@
       android:text="LDrawer"
       />
 
+  <Button
+      android:id="@+id/main_menu_FloatingActionButton"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:layout_marginTop="10dp"
+      android:text="FloatingActionButton"
+      />
+
+  <Button
+      android:id="@+id/main_menu_test"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:layout_marginTop="10dp"
+      android:text="Test"
+      />
+
 </LinearLayout>
