--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,9 @@
     <item name="android:textColor">@android:color/white</item>
     <item name="android:textSize">18sp</item>
   </style>
+
+  <style name="fab_style">
+    <item name="android:background">@color/white</item>
+    <item name="android:textColor">@color/black</item>
+  </style>
 </resources>
