--- a/app/src/main/res/layout/activity_arm.xml
+++ b/app/src/main/res/layout/activity_arm.xml
@@ -8,35 +8,8 @@
     >
 
   <!--title-->
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:gravity="center"
-      android:orientation="horizontal"
-      >
-    <TextView
-        android:id="@+id/main_titlebar_left_tv"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Left"
-        />
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:gravity="center"
-        android:text="Title"
-        />
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Right"
-        />
-  </LinearLayout>
+  <include
+      layout="@layout/view_toolbar"/>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
