--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,38 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
     >
 
-  <Button
-      android:id="@+id/main_menu_AndroidResideMenu"
-      android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:text="AndroidResideMenu"
-      />
+  <include
+      layout="@layout/view_toolbar"/>
 
-  <Button
-      android:id="@+id/main_menu_LDrawer"
+  <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:layout_marginTop="10dp"
-      android:text="LDrawer"
-      />
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:padding="10dp"
+      >
+    <Button
+        android:id="@+id/main_menu_AndroidResideMenu"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="AndroidResideMenu"
+        />
 
-  <Button
-      android:id="@+id/main_menu_FloatingActionButton"
-      android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:layout_marginTop="10dp"
-      android:text="FloatingActionButton"
-      />
+    <Button
+        android:id="@+id/main_menu_LDrawer"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:text="LDrawer"
+        />
 
-  <Button
-      android:id="@+id/main_menu_test"
-      android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:layout_marginTop="10dp"
-      android:text="Test"
-      />
+    <Button
+        android:id="@+id/main_menu_FloatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:text="FloatingActionButton"
+        />
 
+    <Button
+        android:id="@+id/main_menu_test"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:text="Test"
+        />
+  </LinearLayout>
 </LinearLayout>
