--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
   <color name="white">#ffffff</color>
   <color name="black">#000000</color>
   <color name="drawer_arrow_second_color">#334858</color>
-  <color name="actionbar_color">#3F51B5</color>
+  <color name="actionbar_color">#e5e5e5</color>
 </resources>
