--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,17 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+  <style name="AppTheme1" parent="android:Theme.Holo.Light.DarkActionBar">
+    <item name="android:actionBarStyle">@style/ActionBar</item>
+  </style>
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:actionBarStyle">@style/ActionBar</item>
   </style>
 
   <style name="ActionBar" parent="android:Widget.ActionBar">
     <item name="android:background">@color/actionbar_color</item>
     <item name="android:icon">@android:color/transparent</item>
+    <item name="android:windowContentOverlay">@null</item>
     <item name="android:titleTextStyle">@style/ActionBar.TitleText</item>
   </style>
 
